# muta

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile
built-in-services/asset/src/: lib.rs
common/apm/src/metrics/: consensus.rs
core/consensus/: Cargo.toml
core/consensus/src/: engine.rs  message.rs  synchronization.rs
core/mempool/: Cargo.toml
core/mempool/src/: lib.rs
core/mempool/src/adapter/: message.rs  mod.rs
core/mempool/src/tests/: mempool.rs
examples/: muta-chain.rs  storage_service.wasm
framework/src/binding/sdk/: mod.rs
framework/src/binding/tests/: sdk.rs
framework/src/executor/: mod.rs
framework/src/executor/tests/: mod.rs  service_call_service.rs  test_service.rs
protocol/: Cargo.toml
protocol/src/traits/: binding.rs  executor.rs  mod.rs
protocol/src/types/: receipt.rs  service_context.rs
runtime/wasm/: Cargo.toml
runtime/wasm/as-binding/: .gitignore  index.js  package-lock.json  package.json
runtime/wasm/as-binding/assembly/: binding.ts  context.ts  index.ts  primitive.ts  sdk.ts  store.ts  util.ts
runtime/wasm/as-binding/examples/: storage_service.ts
runtime/wasm/src/: binding_proxy.rs  imports.rs  lib.rs  memory.rs
src/: config.rs  default_start.rs
