[package]
name = "runtime-wasm"
version = "0.1.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"
repository = "https://github.com/nervosnetwork/muta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../../protocol", package = "muta-protocol" }

wasmer-runtime = "0.13"
byteorder = "1.3"
ucs2 = "0.3"
bytes = { version = "0.5" }
derive_more = "0.15"
serde_json = "1.0"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
framework = { path = "../../framework" }
